--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://www.nawed2611.github.io",
   "dependencies": {
+    "@react-three/drei": "^8.4.0",
+    "@react-three/fiber": "^7.0.24",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
