--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "axios": "^0.25.0",
     "emailjs": "^3.7.0",
+    "framer-motion": "^6.2.4",
     "gsap": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
